<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.CreateContactAcitivity">

    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/businessNumber"
        android:hint = "9 Digit Business Number"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="-37dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />


    <EditText
        android:id="@+id/name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:hint="Name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessNumber" />

    <EditText
        android:id="@+id/primaryBusiness"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="43dp"
        android:hint="Primary Business"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessNumber" />

    <EditText
        android:id="@+id/province"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="129dp"
        android:hint="Province"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessNumber" />

    <EditText
        android:id="@+id/address"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="86dp"
        android:hint="Address"
        app:layout_constraintTop_toBottomOf="@+id/businessNumber"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />




    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Contact"
        android:layout_marginTop="137dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"

        android:onClick="submitInfoButton"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.502" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="491dp" />

</android.support.constraint.ConstraintLayout>
